<resources>
    <string name="app_name">Shop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Main">Главная</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Catalog">Каталог</string>
    <string name="Cart">Корзина</string>
    <string name="Promotions">Акции</string>
    <string name="Profile">Профиль</string>
    <string name="SignIn">Вход</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="Sign">Войти</string>
    <string name="oferta">Нажимая кнопку \'Войти\', Вы принимаете условия программы лояльности</string>
    <string name="LK">Личный кабинет</string>
    <string name="log_out">Выйти</string>
</resources>