<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_title"
            style="@style/LargeTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignIn" />

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_first_name_container"
        style="@style/MyTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_32"
        android:layout_marginEnd="@dimen/spacing_16"

        android:hint="@string/first_name"
        app:boxCornerRadiusBottomEnd="@dimen/corner_8"
        app:boxCornerRadiusBottomStart="@dimen/corner_8"
        app:boxCornerRadiusTopEnd="@dimen/corner_8"
        app:boxCornerRadiusTopStart="@dimen/corner_8"
        app:endIconDrawable="@drawable/close_small"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_first_name"
            style="@style/MyTextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_last_name_container"
        style="@style/MyTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_16"
        android:hint="@string/last_name"
        app:boxCornerRadiusBottomEnd="@dimen/corner_8"
        app:boxCornerRadiusBottomStart="@dimen/corner_8"
        app:boxCornerRadiusTopEnd="@dimen/corner_8"
        app:boxCornerRadiusTopStart="@dimen/corner_8"
        app:endIconDrawable="@drawable/close_small"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_first_name_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_last_name"
            style="@style/MyTextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_phone_container"
        style="@style/MyTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_16"
        android:hint="@string/phone_number"
        app:boxCornerRadiusBottomEnd="@dimen/corner_8"
        app:boxCornerRadiusBottomStart="@dimen/corner_8"
        app:boxCornerRadiusTopEnd="@dimen/corner_8"
        app:boxCornerRadiusTopStart="@dimen/corner_8"
        app:endIconDrawable="@drawable/close_small"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_last_name_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editnumber"
            style="@style/MyTextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="18" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="@dimen/spacing_32"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_16"
        android:backgroundTint="@color/light_pink"
        android:text="@string/Sign"
        app:boxCornerRadiusBottomEnd="@dimen/corner_8"
        app:boxCornerRadiusBottomStart="@dimen/corner_8"
        app:boxCornerRadiusTopEnd="@dimen/corner_8"
        app:boxCornerRadiusTopStart="@dimen/corner_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_phone_container" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/oferta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
